--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="hero-image-wrapper"> 
-                    <img src="interviewlogo.jpg" alt="Interview process showing a resume" class="hero-image">
+                    <img src="interviewlogo.jpg" alt="Interview process showing a resume" class="hero-image" width="1000" height="500">
                 </div>
             </div>
         </section>
