--- a/teacher_dashboard.html
+++ b/teacher_dashboard.html
@@ -104,7 +104,6 @@
 
                 <div class="dashboard-controls">
                     <button id="addStudentBtn" class="action-btn add-btn">Add New Student</button>
-                    <button id="loadDemoBtn" class="action-btn">Load Demo Students</button>
                     <button id="generateReportBtn" class="action-btn">Generate Report</button>
                 </div>
                 
@@ -205,6 +204,70 @@
 
 
     <script>
+        // DEMO data: automatically add demo users locally when none exist
+        const DEMO_USERS = [
+            {
+                email: 'demo.student1@example.com',
+                fullName: 'Demo Student One',
+                schoolId: 'S1001',
+                phoneNumber: '9999990001',
+                password: '',
+                userType: 'student',
+                grades: { math: { score: '92', grade: 'A' }, programming: { score: '88', grade: 'B' } },
+                interviewReport: 'Strong candidate for engineering roles; good foundation in Math and Programming.'
+            },
+            {
+                email: 'demo.student2@example.com',
+                fullName: 'Demo Student Two',
+                schoolId: 'S1002',
+                phoneNumber: '9999990002',
+                password: '',
+                userType: 'student',
+                grades: { math: { score: '72', grade: 'C' }, physics: { score: '68', grade: 'D' } },
+                interviewReport: 'Needs improvement in Physics; consider remedial sessions.'
+            },
+            {
+                email: 'demo.student3@example.com',
+                fullName: 'Demo Student Three',
+                schoolId: 'S1003',
+                phoneNumber: '9999990003',
+                password: '',
+                userType: 'student',
+                grades: {},
+                interviewReport: ''
+            },
+            {
+                email: 'teacher@example.com',
+                fullName: 'Ms. Demo Teacher',
+                schoolId: '',
+                phoneNumber: '',
+                password: '',
+                userType: 'teacher',
+                grades: {},
+                interviewReport: ''
+            }
+        ];
+
+        function ensureDemoUsers(){
+            try{
+                const raw = localStorage.getItem('users');
+                let users = [];
+                if(raw){ users = JSON.parse(raw || '[]'); }
+                if(!users || users.length === 0){
+                    localStorage.setItem('users', JSON.stringify(DEMO_USERS));
+                    localStorage.setItem('userEmail', 'teacher@example.com');
+                    return;
+                }
+                let changed = false;
+                DEMO_USERS.forEach(d => {
+                    const found = users.find(u => (u.email||'').toLowerCase() === (d.email||'').toLowerCase());
+                    if(!found){ users.push(d); changed = true; }
+                });
+                if(changed) localStorage.setItem('users', JSON.stringify(users));
+                if(!localStorage.getItem('userEmail')) localStorage.setItem('userEmail', 'teacher@example.com');
+            }catch(err){ console.error('ensureDemoUsers error', err); }
+        }
+
         // This will hold our student data from the server
         let students = []; 
         let analyticsChartInstance = null; // This will hold our chart object
@@ -262,6 +325,9 @@
 
         // --- This function runs when the page first loads ---
         document.addEventListener('DOMContentLoaded', () => {
+            // Ensure demo users exist for local development/demo mode
+            ensureDemoUsers();
+
             // 1. Check if user is logged in
             const userEmail = localStorage.getItem('userEmail');
             if (!userEmail) {
@@ -465,25 +531,7 @@
             addStudentError.style.display = "none";
             addStudentModal.style.display = 'flex'; 
         });
-        // --- Load Demo Students ---
-        const loadDemoBtn = document.getElementById('loadDemoBtn');
-        if (loadDemoBtn) {
-            loadDemoBtn.addEventListener('click', async function() {
-                try {
-                    const resp = await fetch('/api/seed-demo', { method: 'POST' });
-                    const data = await resp.json();
-                    if (data && data.success) {
-                        alert('Demo students loaded. Refreshing dashboard...');
-                        loadDashboardData();
-                    } else {
-                        alert('Failed to load demo students: ' + (data && data.message ? data.message : JSON.stringify(data)));
-                    }
-                } catch (err) {
-                    console.error('Error seeding demo students:', err);
-                    alert('Error seeding demo students. See console for details.');
-                }
-            });
-        }
+        // Load-demo flow removed; demo users are seeded locally by ensureDemoUsers()
         sidebarAddStudent.addEventListener('click', (e) => {
              e.preventDefault();
              addStudentBtn.click();
