--- a/teacher_dashboard.html
+++ b/teacher_dashboard.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Teacher Dashboard - Eduwise (Local)</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="dashboard.css">
-  <link rel="stylesheet" href="shared/buttons.css">
-  <link rel="stylesheet" href="teacher.css">
+  <!-- dashboard.css removed (consolidated into teacher_dashboard.css) -->
+  <link rel="stylesheet" href="teacher_dashboard.css">
+  <!-- shared/button styles consolidated into teacher_dashboard.css; keep a print stylesheet for printing -->
   <link rel="stylesheet" href="print.css" media="print">
   <!-- buttons-control removed per user request -->
   <!-- Local-only teacher dashboard: no external fonts or CDNs -->
